--- a/GENERATOR/ToolWindows/DATABASE_BROWSER.xaml
+++ b/GENERATOR/ToolWindows/DATABASE_BROWSER.xaml
@@ -17,7 +17,19 @@
         <Button x:Name="BtnSearch" Content="Search" Canvas.Left="751" Canvas.Top="16" Click="BtnSearch_Click"/>
         <DataGrid x:Name="TblDatabaseTables" Height="389" Width="780" ItemsSource="{Binding DatabaseTables}" AutoGenerateColumns="False" CanUserReorderColumns="False" CanUserDeleteRows="False" CanUserAddRows="False" Canvas.Left="10" Canvas.Top="43">
             <DataGrid.Columns>
-                <DataGridCheckBoxColumn IsReadOnly="False" Header="Select" Binding="{Binding IsSelected, Mode=TwoWay}" Width="50"/>
+                <DataGridTemplateColumn Header="Select" Width="50">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <CheckBox IsChecked="{Binding IsSelected, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            Click="CheckBox_Click"/>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+
+
+
                 <DataGridTextColumn IsReadOnly="True" Header="Name" Binding="{Binding Name}" Width="*" />
             </DataGrid.Columns>
         </DataGrid>
