--- a/GENERATOR/ToolWindows/DATABASE_BROWSER.xaml
+++ b/GENERATOR/ToolWindows/DATABASE_BROWSER.xaml
@@ -1,8 +1,8 @@
 ﻿<platform:DialogWindow  x:Class="CORE_VS_PLUGIN.GENERATOR.ToolWindows.DATABASE_BROWSER"
                         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                         xmlns:platform="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.15.0"
                         mc:Ignorable="d"
                         Width="800"
@@ -10,12 +10,14 @@
                         Title="Database browser"
                         ResizeMode="NoResize"
                         WindowStartupLocation="CenterScreen">
-    <Canvas>
-        <Button Name="BtnExit" Content="Exit" HorizontalAlignment="Center" VerticalAlignment="Center" Height="36" Width="159" Canvas.Left="631" Canvas.Top="563" Click="BtnExit_Click"/>
-        <Label Name="LblSearch" Content="Search database tables:" Canvas.Left="356" Canvas.Top="12" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <TextBox x:Name="TxtSearch" Canvas.Left="495" TextWrapping="Wrap" Text="" Canvas.Top="16" Width="251" HorizontalAlignment="Left" VerticalAlignment="Top" KeyDown="TxtSearch_KeyDown" />
-        <Button x:Name="BtnSearch" Content="Search" Canvas.Left="751" Canvas.Top="16" Click="BtnSearch_Click"/>
-        <DataGrid x:Name="TblDatabaseTables" Height="389" Width="780" ItemsSource="{Binding DatabaseTables}" AutoGenerateColumns="False" CanUserReorderColumns="False" CanUserDeleteRows="False" CanUserAddRows="False" Canvas.Left="10" Canvas.Top="43">
+    <Canvas Margin="10">
+        <Label Name="LblDatabase" Content="Database:" Canvas.Left="10" Canvas.Top="13" />
+        <ComboBox x:Name="CmbDatabase" ItemsSource="{Binding Databases}" SelectedValuePath="ConnectionString" DisplayMemberPath="Name" SelectedValue="{Binding ConnectionString, Mode=TwoWay}" Canvas.Left="77" Canvas.Top="15" Width="120" />
+        <Label Name="LblSearch" Content="Search database tables:" Canvas.Left="443" Canvas.Top="13" RenderTransformOrigin="1.103,0.533"/>
+        <TextBox x:Name="TxtSearch" Canvas.Left="582" TextWrapping="Wrap" Text="" Canvas.Top="17" Width="144" KeyDown="TxtSearch_KeyDown" />
+        <Button x:Name="BtnSearch" Content="Search" Canvas.Left="731" Canvas.Top="15" Click="BtnSearch_Click" />
+
+        <DataGrid x:Name="TblDatabaseTables" Height="389" Width="760" ItemsSource="{Binding DatabaseTables}" AutoGenerateColumns="False" CanUserReorderColumns="False" CanUserDeleteRows="False" CanUserAddRows="False" Canvas.Left="10" Canvas.Top="43">
             <DataGrid.Columns>
                 <DataGridTemplateColumn Header="Select" Width="50">
                     <DataGridTemplateColumn.CellTemplate>
@@ -27,15 +29,11 @@
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-
-
-
                 <DataGridTextColumn IsReadOnly="True" Header="Name" Binding="{Binding Name}" Width="*" />
             </DataGrid.Columns>
         </DataGrid>
-        <Label Name="LblDatabase" Content="Database:" Canvas.Left="10" Canvas.Top="13" RenderTransformOrigin="0.557,-0.195"/>
-        <Button x:Name="BtnGenerate" Content="Generate" Canvas.Left="10" Canvas.Top="557" Height="39" Width="158" Click="BtnGenerate_Click"/>
-        <ComboBox x:Name="CmbDatabase" ItemsSource="{Binding Databases}" SelectedValuePath="ConnectionString" DisplayMemberPath="Name" SelectedValue="{Binding ConnectionString, Mode=TwoWay}" Canvas.Left="77" Canvas.Top="15" Width="120" />
 
+        <Button x:Name="BtnGenerate" Content="Generate" Canvas.Left="10" Canvas.Top="540" Height="40" Width="160" Click="BtnGenerate_Click"/>
+        <Button Name="BtnExit" Content="Exit" Height="40" Width="160" Canvas.Left="611" Canvas.Top="540" Click="BtnExit_Click"/>
     </Canvas>
 </platform:DialogWindow>
